--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -37,6 +37,7 @@ body {
   font-family: 'Jost', sans-serif;
   font-size: 1.2rem;
   line-height: 1.5;
+  
 }
 .display-7 > .mbr-iconfont {
   font-size: 1.5rem;
@@ -733,6 +734,7 @@ a {
   text-align: left;
 }
 .cid-s48udlf8KU .mbr-section-subtitle {
+  text-align: left;
   text-align: left;
 }
 .cid-s48vaXqeL6 {
