--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -888,6 +888,7 @@ a {
 }
 .cid-s48OLK6784 .navbar-caption {
   padding-right: 4rem;
+  float: right;
 }
 .cid-s48OLK6784 .dropdown-menu,
 .cid-s48OLK6784 .navbar.opened {
